# test-infra

./: .gitignore  CLAUDE-SETUP.md  CLAUDE.md  MIGRATION-PLAN.md  Pulumi.staging.yaml  Pulumi.yaml  README.md  __main__.py  pyproject.toml  requirements.txt
.claude/commands/: audit.md  commit.md  deploy.md  help.md  lint.md  new-component.md  new-stack.md  preview.md  pull.md  setup.md  test.md
.claude/skills/devops-requesting-code-review/: SKILL.md
.claude/skills/devops-systematic-debugging/: SKILL.md
.claude/skills/pulumi-automation-api/: SKILL.md
.claude/skills/pulumi-best-practices/: SKILL.md
.claude/skills/pulumi-component/: SKILL.md
.claude/skills/pulumi-esc/: SKILL.md
.claude/skills/senior-devops/: SKILL.md
.claude/skills/senior-secops/: SKILL.md
.github/workflows/: deploy-oidc-pages.yaml  pulumi-deploy.yml  pulumi-drift.yml
.wrangler/cache/: pages.json
cloudflare-pages/staging/.well-known/: openid-configuration
docs/: bootstrap.md  monitoring.md  operations.md  secrets-auth.md  troubleshooting.md
flux/apps/: kustomization.yaml
flux/apps/databases/: dev-pg-lb.yaml  dev-pg.yaml  external-secret-gitlab-pg.yaml  gitlab-pg.yaml  kustomization.yaml
flux/apps/gitlab/: helmrelease.yaml  helmrepository.yaml  hooks-configmap.yaml  kustomization.yaml
flux/apps/gitlab-runner/: external-secrets.yaml  helmrelease.yaml  helmrepository.yaml  kustomization.yaml
flux/clusters/staging/: apps.yaml  cluster-vars.yaml  infrastructure-configs.yaml  infrastructure-controllers.yaml  kustomization.yaml
infra/: flux.py
infra/components/: flux_bootstrap.py
(+45 files in other folders)
